--- a/frontend/src/app/features/manager/pages/employee-list/employee-list.component.html
+++ b/frontend/src/app/features/manager/pages/employee-list/employee-list.component.html
@@ -70,10 +70,9 @@
   </div>
 </div>
 
-<!-- Employee Form Modal -->
+<!-- Employee Form Modal (only for creating new employees) -->
 <app-employee-form-modal
   *ngIf="showEmployeeForm"
-  [employeeId]="selectedEmployeeId"
   (closed)="closeEmployeeForm()"
   (saved)="onEmployeeSaved()">
 </app-employee-form-modal>
